Implimented VM Indication masking and moved some code around

--- a/Compiler/settings.ini
+++ b/Compiler/settings.ini
@@ -19,9 +19,9 @@ ico =
 [inf]
 ver = 1
 vr1 = 1,0,0,0
-vr2 = 1,1,0,0
+vr2 = 4,0,0,0
 vr3 = JayMontana36
 vr4 = vBox VM System Info Modifier
 vr5 = vBoxSysInfoMod
-vr6 = Modifies vBox System Info to match real system info.
-vr7 = © 2016 JayMontana36
+vr6 = Modifies VirtualBox VM System Information to match a real system's info.
+vr7 = © 2017 JayMontana36
