--- a/Compiler/settings.ini
+++ b/Compiler/settings.ini
@@ -2,8 +2,8 @@
 [lang]
 lang = english
 [files]
-bat = 
-exe = 
+bat = ..\vBox System Info Mod.bat
+exe = ..\vBox System Info Mod.exe
 [opt]
 ivi = 0
 dir = 0
@@ -15,11 +15,11 @@ owr = 1
 cmp = 1
 x64 = 0
 [inc]
-ico = 
+ico = .\vBox System Info Mod Icon.ico
 [inf]
 ver = 1
-vr1 = 1,0,0,0
-vr2 = 4,0,0,0
+vr1 = 4,0,0,0
+vr2 = 4,1,0,0
 vr3 = JayMontana36
 vr4 = vBox VM System Info Modifier
 vr5 = vBoxSysInfoMod
