Compiler Default Settings Update for version 5

--- a/Compiler/settings.ini
+++ b/Compiler/settings.ini
@@ -18,10 +18,10 @@ x64 = 0
 ico = .\vBox System Info Mod Icon.ico
 [inf]
 ver = 1
-vr1 = 4,0,0,0
-vr2 = 4,1,0,0
+vr1 = 5,0,0,0
+vr2 = 5,0,0,0
 vr3 = JayMontana36
-vr4 = vBox VM System Info Modifier
+vr4 = vBox VM System Information Modifier
 vr5 = vBoxSysInfoMod
-vr6 = Modifies VirtualBox VM System Information to match a real system's info.
-vr7 = © 2017 JayMontana36
+vr6 = Changes VirtualBox VM System Information to anything that your heart and soul desires it to be.
+vr7 = © 2018 JayMontana36
