--- a/Compiler/settings.ini
+++ b/Compiler/settings.ini
@@ -5,8 +5,8 @@ lang = english
 bat = ..\vBox System Info Mod.bat
 exe = ..\vBox System Info Mod.exe
 [opt]
-ivi = 0
-dir = 0
+ivi = 1
+dir = 1
 tmp = 0
 enc = 0
 pwd = 
@@ -16,10 +16,13 @@ cmp = 1
 x64 = 0
 [inc]
 ico = .\vBox System Info Mod Icon.ico
+0 = ..\inputbox.exe
+1 = ..\messagebox.exe
+2 = ..\folderbrowse.exe
 [inf]
 ver = 1
-vr1 = 5,0,0,0
-vr2 = 5,0,0,0
+vr1 = 5,1,0,0
+vr2 = 5,1,0,0
 vr3 = JayMontana36
 vr4 = vBox VM System Information Modifier
 vr5 = vBoxSysInfoMod
