--- a/Compiler/settings.ini
+++ b/Compiler/settings.ini
@@ -18,10 +18,10 @@ x64 = 0
 ico = .\vBox System Info Mod Icon.ico
 [inf]
 ver = 1
-vr1 = 5,2,0,0
-vr2 = 5,2,0,0
+vr1 = 6,0,0,0
+vr2 = 6,0,0,0
 vr3 = JayMontana36
 vr4 = vBox VM System Information Modifier
 vr5 = vBoxSysInfoMod
-vr6 = Changes VirtualBox VM System Information to anything that your heart and soul desires it to be.
+vr6 = Manipulates VirtualBox VM System Information to anything your heart and soul desires it to be.
 vr7 = © 2018 JayMontana36
