--- a/Compiler/settings.ini
+++ b/Compiler/settings.ini
@@ -5,8 +5,8 @@ lang = english
 bat = ..\vBox System Info Mod.bat
 exe = ..\vBox System Info Mod.exe
 [opt]
-ivi = 0
-dir = 0
+ivi = 1
+dir = 1
 tmp = 0
 enc = 0
 pwd = 
@@ -16,6 +16,9 @@ cmp = 1
 x64 = 0
 [inc]
 ico = .\vBox System Info Mod Icon.ico
+0 = ..\inputbox.exe	
+1 = ..\messagebox.exe	
+2 = ..\folderbrowse.exe
 [inf]
 ver = 1
 vr1 = 6,0,0,1
